duniverse/menhirLib.20200211/test/static/bad/constant-inline-in-multiple-def-1.mly
%start<int> b
%%

b: {}
%public a: {}
